# TaskRunner

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  UsrLinuxEmu
.githooks/: pre-commit
.github/workflows/: shim.yml
cmake/: Shared.cmake  TestFixture.cmake  UMDEvolution.cmake
docs/: ONBOARDING.md  cuda-vulkan-runtime-architecture.md  phase1-week1-plan.md  plan.md
docs/07-integration/: cross-repo-h7-template.md
docs/adr/: README.md  tadr-000-template.md  tadr-001-cuda-vulkan-runtime-unified-scheduler.md  tadr-002-cuda-vulkan-runtime-layered-design.md  tadr-003-cuda-vulkan-runtime-sync-unified-internal.md  tadr-004-cuda-vulkan-runtime-stub-tracker.md  tadr-005-h2-5-igpu-driver-consumer-lens.md  tadr-006-h3-phase2-consumer-lens.md  tadr-007-r2-mapping-contract.md  tadr-008-h7-deferred-mirror.md
docs/architecture/: capabilities.md  current.md  layers.md
docs/archive/: 2026-04-07-DDS-CUDA-Vulkan-Runtime-v1.2-final.md  2026-04-07-cuda-vulkan-runtime-architecture.md  2026-04-07-decision-frame-cuda-vulkan-runtime.md  README.md
docs/roadmap/: README.md  phase-1.5.md  phase-1.md  phase-3.md
docs/shared/: README.md
docs/shared/adr/: README.md  tadr-000-template.md  tadr-107-shared-infrastructure-boundary.md  tadr-108-build-mode-selection.md  tadr-301-igpu-driver-contract.md  tadr-302-mempool-export-shareable.md  tadr-302-sync-primitives.md  tadr-303-error-handling.md  tadr-304-error-handling-strategy.md  tadr-305-mempool-export-shareable.md
docs/shared/research/: gpu-queue-id-patterns-2026-06-26.md  usrlinuxemu-gpu-driver-design-2026-06-24.md
docs/superpowers/architecture/: shim-layer.md
docs/superpowers/cross-repo-prs/: 2026-07-02-h3-followup-fixes.md  2026-07-05-phase3-1-stream-mempool-coordination.md  2026-07-05-usrlx-architecture-review.md
docs/superpowers/plans/: 2026-06-30-umd-evolution-redesign.md  2026-07-01-umd-phase2-ld-preload.md  2026-07-02-phase1.5-cudastub-dynamic-cast-fix.md  2026-07-02-phase3-prep-design-notes.md  2026-07-05-umd-phase3.3-event-texture.md  2026-07-08-phase17-coverage-audit-supersede.md  2026-07-08-phase3-3-kickoff.md
docs/superpowers/specs/: 2026-06-30-umd-evolution-redesign.md  2026-07-02-phase1.5-cudastub-dynamic-cast-fix.md  2026-07-02-phase3-mempool-design.md  2026-07-02-phase3-stream-capture-design.md
docs/test-fixture/: README.md  phase1-week1-plan.md
docs/test-fixture/adr/: tadr-004-redirect.md  tadr-005-redirect.md  tadr-006-redirect.md  tadr-007-redirect.md  tadr-008-redirect.md  tadr-101-stub-tracker.md  tadr-102-igpu-driver.md  tadr-103-h3-phase2.md  tadr-104-r2-mapping.md  tadr-105-h7-deferred.md  tadr-106-test-fixture-scope-clarification.md  tadr-109-igpu-driver-uniform-scheduling.md
docs/test-fixture/architecture/: README.md  capabilities.md  current.md  data-flow.md  layers.md
docs/test-fixture/archive/: 2026-04-07-DDS-CUDA-Vulkan-Runtime-v1.2-final.md  2026-04-07-cuda-vulkan-runtime-architecture.md  2026-04-07-decision-frame-cuda-vulkan-runtime.md  README.md
docs/test-fixture/coordination/: h7-issue-1-github-issue-draft-2026-06-26.md  h7-issue-3-github-issue-draft-2026-06-26.md
docs/test-fixture/research/: abi-backward-compat-test-design-2026-06-26.md  gpu-queue-emu-api-2026-06-26.md  h7-issue-3-test-design-2026-06-26.md  ioctl-mmap-equivalence-2026-06-26.md  taskrunner-positioning-2026-06-24.md  u64-boundary-test-design-2026-06-26.md
docs/test-fixture/roadmap/: README.md  phase-1.5.md  phase-1.md  phase-2.md  phase-3.md  retrospective.md
docs/umd-evolution/: README.md  gap-analysis.md  vision-source.md  vision.md
docs/umd-evolution/adr/: tadr-001-redirect.md  tadr-002-redirect.md  tadr-003-redirect.md  tadr-201-unified-scheduler.md  tadr-202-layered-design.md  (+4 more)
include/: Barrier.h  CmdBuffer.h  CmdProcessor.h  CmdStream.h  EventQueue.h  TaskBuffer.h  TaskQueue.h  TaskRunner.h  cuda.h  cuda_scheduler.hpp  cuda_stub.hpp  gpu_driver_client.h  igpu_driver.hpp  sync_primitives.hpp
include/shared/: error_handling.hpp  igpu_driver.hpp  memory_manager.hpp  sync_primitives.hpp
include/taskrunner/: barrier.h  scheduler.h  taskqueue.h  worker.h
include/test_fixture/: Barrier.h  CmdBuffer.h  CmdProcessor.h  CmdStream.h  EventQueue.h  TaskBuffer.h  TaskQueue.h  TaskRunner.h  cmd_cuda.h  cuda_scheduler.hpp  cuda_stub.hpp  gpu_driver_client.h
include/umd/: cuda_api.hpp  cuda_runtime_api.hpp  module_loader.hpp  ring_buffer.hpp
openspec/: TOOLING_ISSUES.md  config.yaml
plans/: README.md  findings.md  gpu_queue_architecture_research.md  sync-plan.md
plans/2026-06-19-h2-5-architecture-foundation/: .openspec.yaml  README.md  design.md  proposal.md
plans/2026-06-19-h3-phase2-openspec-skeleton/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
plans/archive/: 2026-06-19-rebase-h1-onto-main.md  2026-06-26-h3-maintenance-transition.md  gpu_queue_architecture_research.md  interface-unification-plan.md  progress.md
sample/: main.cpp  main1.cpp
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src/: TaskRunner.cpp  barrier.cpp  cli_main.cpp  cmd_buffer_v2.cpp  cmd_cuda.cpp  cuda_scheduler.cpp  cuda_stub.cpp  gpu_driver_client.cpp  memory_manager.cpp  scheduler.cpp  sync_primitives.cpp  taskqueue.cpp  worker.cpp
src/shared/: memory_manager.cpp  sync_primitives.cpp
src/test_fixture/: CmdProcessor.cpp  TaskRunner.cpp  cli_main.cpp  cmd_buffer_v2.cpp  cmd_cuda.cpp  cuda_scheduler.cpp  cuda_stub.cpp  gpu_driver_client.cpp
src/umd/: cuda_api.cpp  cuda_runtime_api.cpp  module_loader.cpp  ring_buffer.cpp
tests/: test_gpu_phase2.cpp  test_taskrunner.cpp
tests/shared/: README.md
tests/test_fixture/: mock_gpu_driver.hpp  test_cuda_scheduler.cpp  test_gpu_architecture.cpp  test_gpu_phase2.cpp  test_kfd_e2e_bridge.cpp
tests/umd/: test_cu_graph.cpp  test_cu_graph_e2e_standalone.cpp  test_cu_mem_pool.cpp  test_cu_stream_capture.cpp  test_cuda_runtime_api.cpp  test_cuda_shim.cpp  test_event_timing.cpp  test_shim_default_init.cpp  test_texture_surface.cpp  test_umd_skeleton.cpp
tools/: coverage.sh  docs-audit.sh  generate_cu_stubs.py  verify-phase17.sh
(+129 files in other folders)
